# discord-autoupdate

./: README.md  pyproject.toml
discord_autoupdate/: main.py
